# hex-life

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: continuous_deployment.yml
docs/: index.html
docs/pkg/: web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
engine/: Cargo.toml
engine/src/: data.rs  game.rs  lib.rs  pattern.rs  rules.rs  unit.rs
pkg/: package.json  web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
src/: lib.rs  main.rs  ui.rs
web/: index.html  package-lock.json
