[package]
name = "game-of-life-hex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
h3o = "0.4.0"
three-d = {version = "0.16.0", features=["egui-gui"]}
enum-iterator = "1.4.1"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "0.2"
