[package]
name = "game-of-life-hex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
    "engine",
]

[dependencies]
engine = { path = "engine" }
h3o = "0.4.0"
three-d = { version = "0.16.0", features = ["egui-gui"] }
log = "0.4"
console_log = "0.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
