[package]
name = "game-of-life-hex"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["engine"]

[dependencies]
engine = { path = "engine" }
three-d = { version = "0.16.0", features = ["egui-gui"] }
log = "0.4"
console_log = "0.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3.58", features = [
    "BinaryType",
    "Blob",
    "Clipboard",
    "ClipboardEvent",
    "CompositionEvent",
    "console",
    "CssStyleDeclaration",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "Document",
    "DomRect",
    "DragEvent",
    "Element",
    "Event",
    "EventListener",
    "EventTarget",
    "ExtSRgb",
    "File",
    "FileList",
    "FocusEvent",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "InputEvent",
    "KeyboardEvent",
    "Location",
    "MediaQueryList",
    "MediaQueryListEvent",
    "MouseEvent",
    "Navigator",
    "Performance",
    "Storage",
    "Touch",
    "TouchEvent",
    "TouchList",
    "WebGl2RenderingContext",
    "WebglDebugRendererInfo",
    "WebGlRenderingContext",
    "WheelEvent",
    "Window",
] }

[profile.release]
lto = "fat"
